--- a/index.html
+++ b/index.html
@@ -16,9 +16,35 @@
   </head>
 
   <body>	
-    <p>Alphabet REF does not collect any user data.</p>
-	<p>Игра "Аlphabet REF" никаких данных пользователей не собирает.</p>
-	<p>Alphabet REF ne collecte aucune donnée utilisateur.</p>	 
+        <h3>ALPHABTN REF - Interactive alphabet for preschool children</h3>
+	<p>Interactive alphabet for preschool children. 3 in 1. English, Russian and French alphabets in one application. A child can study both independently and under the supervision of adults.<br>
+No ads.<br>
+There is no violence.<br>
+There are no adult images.<br>
+It does not collect user data and does not transfer it to third parties.<br>
+There are no calls for terrorism.<br>
+No mention of drugs.<br>
+Contains a minimum of text and bright pictures.
+</p>
+	<h3>Игра "Аlphabet REF" - Интерактивная азбука для детей дошкольного возраста</h3>
+	<p>Интерактивная азбука для детей дошкольного возраста. 3 в 1. Английский, Русский и Французский алфавиты в одном приложении. Ребёнок может заниматься как самостоятельно, так и под руководством старших.<br>
+Нет рекламы.<br>
+Нет насилия.<br>
+Нет изображений для взрослых.<br>
+Не собирает данные пользователей и не передаёт их третьим лицам.<br>
+Нет призывов к терроризму.<br>
+Нет упоминания наркотиков.<br>
+Содержит минимум текста и яркие картинки.
+</p>
+	<h3>Alphabet REF - Alphabet interactif pour les enfants d'âge préscolaire</h3>
+<p>Alphabet interactif pour les enfants d'âge préscolaire. 3 en 1. Alphabets anglais, russe et français dans une seule application. L'enfant peut étudier à la fois de manière indépendante et sous la direction d'aînés.<br>
+Pas de pubs.<br>
+Il n'y a pas de violence.<br>
+Il n'y a pas d'images pour adultes.<br>
+Il ne collecte pas les données des utilisateurs et ne les transfère pas à des tiers.<br>
+Il n'y a pas d'appels au terrorisme.<br>
+Aucune mention de drogue.
+</p>	 
   </body>
   
 </html>
